# sotachaser_web

./: .gitignore  Cargo.toml  README.md  index.html  style.css
scripts/: deploy_sotachaser_web.sh  sotachaser.conf
src/: app.rs  lib.rs  serial.rs
